Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/diamond/T8041713/DiamondPlusUnexistingMethodRefCrashTest.out
DiamondPlusUnexistingMethodRefCrashTest.java:10:55: compiler.err.invalid.mref: kindname.method, (compiler.misc.cant.resolve.location.args: kindname.method, doNotExists, , , (compiler.misc.location: kindname.class, DiamondPlusUnexistingMethodRefCrashTest, null))
1 error
